# SDL2-Tetris

./: ..gitignore.un~  .CMakeLists.txt.un~  .gitignore  .gitignore~  .gitmodules  CMakeLists.txt  CMakeLists.txt~  README.md  build.cmd  config.cmd  run.cmd  toolchain.cmake
doc/: CMakeLists.txt
src/: .CMakeLists.txt.un~  CMakeLists.txt  CMakeLists.txt~
src/appTetris/: .CMakeLists.txt.un~  CMakeLists.txt  CMakeLists.txt~  Main.cpp  Main.cpp~
src/appTetris/include/: ExtensionString.h  GameInstance.h  GameManager.h  InputManager.h  LevelManager.h  LockDelayManager.h  SDLHandle.h  SDLManager.h  SDLTimerManager.h  SDLWrapper.h  SDLlogHelper.h  Shape.h  StringExtension.h  Tetrominoe.h  TetrominoeManager.h  TetrominoeRotationRealignmentHelper.h  TetrominoeShapeEnum.h  TetrominoeWallKickHelper.h  TextureLoader.h  TextureManager.h  Tile.h  TileMap.h  TraitHelper.h
src/appTetris/src/: GameInstance.cpp  GameManager.cpp  InputManager.cpp  LevelManager.cpp  LockDelayManager.cpp  SDLHandle.cpp  SDLManager.cpp  SDLTimerManager.cpp  SDLWrapper.cpp  SDLlogHelper.cpp  Shape.cpp  Tetrominoe.cpp  TetrominoeManager.cpp  TetrominoeRotationRealignmentHelper.cpp  TetrominoeWallKickHelper.cpp  TextureLoader.cpp  TextureManager.cpp  Tile.cpp  TileMap.cpp
test/: CMakeLists.txt
