set(
	MYLANGUAGES
	CXX
)

project(
	Demo
    VERSION 0.0.0.0
    DESCRIPTION "Demo"
    LANGUAGES ${MYLANGUAGES}
)

# project includes, sources

file(
	GLOB_RECURSE
	MYPROJECT_SOURCES
	"${CMAKE_CURRENT_SOURCE_DIR}/src"
	*.cpp
)

# project executable

add_executable(
	${PROJECT_NAME}
	Main.cpp
	${MYPROJECT_SOURCES}
)

add_dependencies(
	${PROJECT_NAME}
	lib::imgui
	lib::sdl2
)

target_link_libraries(
	${PROJECT_NAME}
	PRIVATE
	lib::imgui
	lib::sdl2
)

get_target_property(
	libSDL2_A
	lib::sdl2
	ALIASED_TARGET
)

add_custom_command ( TARGET ${PROJECT_NAME} POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_if_different
    $<TARGET_RUNTIME_DLLS:${PROJECT_NAME}> $<TARGET_FILE_DIR:${PROJECT_NAME}>
)

# set project specifics

set(
	MYCXX_VERSION_STANDARD
	20
)

set(
	CMAKE_CXX_STANDARD
	${MYCXX_VERSION_STANDARD}
)

if(NOT ${CMAKE_CXX_STANDARD} EQUAL ${MYCXX_VERSION_STANDARD})
	message(WARNING "WARNING! CXX_STANDARD SHOULD BE CXX_${MYCXX_VERSION_STANDARD}, CURRENTLY : ${CMAKE_CXX_STANDARD}")
else()
	message(WARNING "WARNING! CXX_STANDARD IS CXX_${CMAKE_CXX_STANDARD}")
endif()

set(
	CMAKE_CXX_STANDARD_REQUIRED
	ON
)

if(${CMAKE_CXX_STANDARD_REQUIRED})
	message(WARNING "WARNING! CXX_STANDARD_REQUIRED IS ${CMAKE_CXX_STANDARD_REQUIRED}. MAKE SURE YOU HAVE THE LATEST COMPILER VERSION SUPPORTING THE CURRENT REQUIREMENTS FOR CXX_${CMAKE_CXX_STANDARD}")
endif()

set(
	CMAKE_CXX_EXTENSIONS
	OFF
)

if(NOT ${CMAKE_CXX_EXTENSIONS})
	message(WARNING "WARNING! CXX_EXTENSIONS IS ${CMAKE_CXX_EXTENSIONS}!")
endif()

# check support for LINK Time Optimization between translation units

include(CheckIPOSupported)

check_ipo_supported(
	RESULT
	IS_IPO_SUPPORTED
	OUTPUT
	IPO_SUPPORT_LOG_OUTPUT
	LANGUAGES
	${MYLANGUAGES}
)

if(NOT ${IS_IPO_SUPPORTED})
	message(WARNING "IPO ADD ON SUPPORTED : ${IS_IPO_SUPPORTED}. ${IPO_SUPPORT_LOG_OUTPUT}")
else()
	set(
		CMAKE_INTERPROCEDURAL_OPTIMIZATION
		TRUE
	)
endif()

# check compiler features supported

set(
	PRINT_UNSUPPORTED_COMPILE_FEATURES
	FALSE
)

if(${PRINT_UNSUPPORTED_COMPILE_FEATURES})
	foreach(VAR IN LISTS CMAKE_CXX_COMPILE_FEATURES)
		list(FIND CMAKE_CXX_COMPILE_FEATURES ${VAR} RESULT COMPILE_FEATURE_SUPPORT_RESULT)
		if(NOT ${COMPILE_FEATURE_SUPPORT_RESULT})
			message(WARNING "WARNING! FEATURE NOT SUPPORTED : ${VAR}")
		endif()
	endforeach()
endif()